fix(plugins/plugin-client-common): avoid font-weight shifting in top tabs
When switching tabs, we currently alter the font-weight of the tab labels. This causes a reflow effect that would be nice to avoid.

--- a/plugins/plugin-client-common/web/scss/components/TopTabStripe/_index.scss
+++ b/plugins/plugin-client-common/web/scss/components/TopTabStripe/_index.scss
@@ -128,7 +128,6 @@ $tab-label-font-size: 0.875rem;
     &.kui--tab--active {
       @include TabLabel {
         color: var(--color-text-01);
-        font-weight: 500;
         &:hover {
           color: var(--color-text-01);
         }
